Back to top btn fix via z-index/ updated about section

--- a/assets/css/stylier.css
+++ b/assets/css/stylier.css
@@ -24,10 +24,11 @@ body, html{
 }
 
 #toTop {
-    padding: 20px;
+    padding: 2px;
     background: #000;
     color: #ffee00;
     position: fixed;
+    z-index: 2;
     border-radius: 50%;
     bottom: 0;
     right: 5px;
@@ -94,45 +95,35 @@ img.caro-img{
   height: 70%;
   background-repeat: no-repeat;
   background-size: cover;
-  
 }
-.image1{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/theblacksheep.jpg);
-    background-position: center;
-}
-.image2{
-    background-image: url(./assets/images/auBasin.jpg);
-    background-position: center;
-}
-.image3{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/71582756_976219722723674_4087327437082329088_o.jpg);
-    background-position: center;
-}
-.image4{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/funkymonkey.jpg);
-    background-position: bottom;
-}
-.image5{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/Beige-at-ViaVia.jpg);
-background-position: bottom;
-}
-.img-show-1{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/funkymonkey.jpg);
-    background-position: center;
-    height: 70%;
-    }
-.img-show-2{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/Beige-at-ViaVia.jpg);
-    background-position: bottom;
-    height: 70%;
-    }
-.img-show-3{
-    background-image: url(/workspace/Insecure-Dangereux_site/assets/images/theblacksheep.jpg);
-    background-position: center;
-    height: 70%;
-    }
 
+/*_________ABOUT US page__________________*/
 
+.main-about{
+    color: #ffee00;
+    background-color: #00000044;
+    text-align: center ;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.main-about p{
+      font-size: 30px;
+      
+}
+.about-us1{
+    background: url(../images/about-image-1.jpg) no-repeat;
+    width: 70%;
+    height: 300px;
+    position: relative;
+     background-size: cover;
+}
+.about-us2{
+    background: url(../images/founders-of-ID.jpg) no-repeat;
+    width: 70%;
+    height: 300%;
+    position: relative;
+     background-size: cover;
+}
 /*______Venue-HEADERS______*/
 
 .icon{
@@ -733,4 +724,21 @@ font-size: 30px;
     width: 97.5%;
     height: 408px;
 }
+/*_________ABOUT US page__________________*/
+.main-about p{
+      font-size: 20px;
+      
+}
+
+.about-us1{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.about-us2{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
 }
